syntax = "proto3";

package projectconfig;

option java_package = "com.example.grpc.projectconfig";
option java_multiple_files = true;
option java_outer_classname = "ProjectConfigProto";

// Internal service for inter-service communication
// Only accessible to authorized internal services (Sync Service)
service ProjectConfigInternalService {
  // Get decrypted configuration (with API tokens)
  // Only Sync Service can call this method
  rpc InternalGetDecryptedConfig(InternalGetDecryptedConfigRequest) returns (InternalGetDecryptedConfigResponse);
  
  // List all verified configs (for batch sync)
  rpc InternalListVerifiedConfigs(InternalListVerifiedConfigsRequest) returns (InternalListVerifiedConfigsResponse);
}

message InternalGetDecryptedConfigRequest {
  int64 config_id = 1;
}

message InternalGetDecryptedConfigResponse {
  int64 config_id = 1;
  int64 group_id = 2;
  string jira_host_url = 3;
  string jira_api_token = 4;           // DECRYPTED
  string jira_project_key = 5;
  string github_repo_url = 6;
  string github_access_token = 7;      // DECRYPTED
  string state = 8;                    // VERIFIED, DRAFT, INVALID
}

message InternalListVerifiedConfigsRequest {
  // Empty - returns all VERIFIED configs
}

message InternalListVerifiedConfigsResponse {
  repeated ConfigSummary configs = 1;
}

message ConfigSummary {
  int64 config_id = 1;
  int64 group_id = 2;
  string state = 3;
}
